--- a/index.html
+++ b/index.html
@@ -1,14 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index</title>
-</head>
-<body>
-    <p>
-    trial for index
-    </p>
-</body>
+    <link rel="stylesheet" href="styles/nav.css" />
+    <link rel="icon" type="image/png" href="images/valicon.jpg" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
+  </head>
+  <body>
+    <div>
+      <img
+        class="logo"
+        src="images/valicon.jpg"
+        alt="logo"
+        title="logo"
+        width="50"
+      />
+    </div>
+
+    <nav>
+      <div class="valbar">
+        <ul>
+          <li class="dropdown">
+            <a href="javascript:void(0)" class="dropbtn">About Valorant</a>
+            <div class="dropdown-content">
+              <a href="#">Agents</a>
+              <a href="#">Maps</a>
+              <a href="#">Weapons</a>
+            </div>
+          </li>
+          <li><a href="#">FPS Basics</a></li>
+          <li><a href="#">Glossary</a></li>
+          <li><a href="#">Sitemap</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="title">
+      <h1>Valorant Guide for Beginners</h1>
+    </div>
+    <div class="homepic">
+      <img
+        src="images/valhome.webp"
+        alt="Valorant"
+        title="photo of valorant"
+        height="500"
+        width="900"
+      />
+    </div>
+
+    <div class="box">
+      <h2>What is Valorant?</h2>
+      Riot Games's first ever FPS (first person shooter) game, Valorant, sister
+      to Riot's most succesful franchise 'League of Legends', was released in
+      2020. It is described as a 5v5 character-based tactical FPS where precise
+      gunplay meets unique agent abilities. Two teams, defenders vs attackers,
+      play to win 13 rounds on various maps. Valorant is the perfect blend
+      between CSGO and Overwatch, bringing exciting agent abilities with
+      traditional gun-play in games.
+      <div class="buttons">
+        <a
+          href="https://playvalorant.com/en-us/?utm_source=riotbar&utm_medium=productcard%2Bplayvalorant.com&utm_campaign=val&utm_content=ep5act1"
+          >Get Started</a
+        >
+      </div>
+    </div>
+  </body>
 </html>
