--- a/index.html
+++ b/index.html
@@ -62,10 +62,14 @@
       2020. It is described as a 5v5 character-based tactical FPS where precise
       gunplay meets unique agent abilities. Two teams, defenders vs attackers,
       play to win 13 rounds on various maps. Valorant is the perfect blend
-      between CSGO and Overwatch, bringing exciting agent abilities with
-      traditional gun-play in games.
-      <div class="buttons">
+      between CSGO and Overwatch, blending exciting agent abilities with
+      traditional gun-play to bring in new dimensional gameplays.There's much to
+      learn, but fret not! Valorant is a fairly simple and user friendly FPS
+      game that is quick to pick up. This guide will cover all the basics you
+      need to know to get started!
+      <div>
         <a
+          class="buttons"
           href="https://playvalorant.com/en-us/?utm_source=riotbar&utm_medium=productcard%2Bplayvalorant.com&utm_campaign=val&utm_content=ep5act1"
           >Get Started</a
         >
