--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       </div>
     </nav>
 
-    <div class="title">
-      <h1>Valorant Guide for Beginners</h1>
-    </div>
+
+    <h1>Valorant Guide for Beginners</h1>
+
     <div class="homepic">
       <img
         src="images/valhome.webp"
@@ -74,6 +74,30 @@
           >Get Started</a
         >
       </div>
+    </div>
+
+    <div class="box2">
+        <div class="row">
+            <div class="column">
+              <img src="images/valintro.jpg" alt="val intro"  title="intro to val" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="images/valintro2.jpg" alt="val intro 2"  title="intro to val 2" style="width:100%">
+            </div>
+    </div>
+    <div class="p1">
+      <p>
+        In a tatical 5v5 shooter game, each player will select an agent at the
+        start of the round. You will either start on the side of the 'attackers'
+        where you will push onto a site and plant the 'spike' (bomb) and prevent
+        the 'defenders' from defusing it or killing everyone in your team. The
+        attackers win by either letting the bomb explode or killing everyone in
+        the defender's team. The defenders' objective is to diffuse the bomb if
+        it has been planted or to kill everyone in the attacker team. First team
+        to win 13 rounds wins the entire game. Each round, you only have 1 life
+        and 100 health. There will be exceptions to these due to agent and
+        shield variables (We will get into the details later). 
+      </p>
     </div>
   </body>
 </html>
