--- a/index.html
+++ b/index.html
@@ -1,89 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index</title>
-    <link rel="stylesheet" href="styles/nav.css" />
-    <link rel="icon" type="image/png" href="images/valicon.jpg" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    />
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Index</title>
+  <link rel="stylesheet" href="styles/nav.css" />
+  <link rel="icon" type="image/png" href="images/valicon.jpg" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+</head>
+
+<body>
+  <div>
+    <img class="logo" src="images/valicon.jpg" alt="logo" title="logo" width="50" />
+  </div>
+
+  <nav>
+    <div class="valbar">
+      <ul>
+        <li class="dropdown">
+          <a href="javascript:void(0)" class="dropbtn">About Valorant</a>
+          <div class="dropdown-content">
+            <a href="#">Agents</a>
+            <a href="#">Maps</a>
+            <a href="#">Weapons</a>
+          </div>
+        </li>
+        <li><a href="#">FPS Basics</a></li>
+        <li><a href="#">Glossary</a></li>
+        <li><a href="#">Sitemap</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <header>
+    <h1>The Ultimate Valorant Guide for Beginners</h1>
+  </header>
+  <div class="homepic">
+    <img src="images/valhome.webp" alt="Valorant" title="photo of valorant" height="500" width="900" />
+  </div>
+
+  <div class="box">
+    <h2>What is Valorant?</h2>
+    Riot Games's first ever FPS (first person shooter) game, Valorant, sister
+    to Riot's most succesful franchise 'League of Legends', was released in
+    2020. It is described as a 5v5 character-based tactical FPS where precise
+    gunplay meets unique agent abilities. Two teams, defenders vs attackers,
+    play to win 13 rounds on various maps. Valorant is the perfect blend
+    between CSGO and Overwatch, blending exciting agent abilities with
+    traditional gun-play to bring in new dimensional gameplays.There's much to
+    learn, but fret not! Valorant is a fairly simple and user friendly FPS
+    game that is quick to pick up. This guide will cover all the basics you
+    need to know to get started!
     <div>
-      <img
-        class="logo"
-        src="images/valicon.jpg"
-        alt="logo"
-        title="logo"
-        width="50"
-      />
+      <a class="buttons" href="https://playvalorant.com/en-us/">Get Started</a>
     </div>
+  </div>
 
-    <nav>
-      <div class="valbar">
-        <ul>
-          <li class="dropdown">
-            <a href="javascript:void(0)" class="dropbtn">About Valorant</a>
-            <div class="dropdown-content">
-              <a href="#">Agents</a>
-              <a href="#">Maps</a>
-              <a href="#">Weapons</a>
-            </div>
-          </li>
-          <li><a href="#">FPS Basics</a></li>
-          <li><a href="#">Glossary</a></li>
-          <li><a href="#">Sitemap</a></li>
-          <li><a href="#">Contact Us</a></li>
-        </ul>
+  <div class="box2">
+    <div class="row">
+      <div class="column">
+        <img src="images/valintro.jpg" alt="val intro" title="intro to val" style="width:100%">
       </div>
-    </nav>
-
-
-    <h1>Valorant Guide for Beginners</h1>
-
-    <div class="homepic">
-      <img
-        src="images/valhome.webp"
-        alt="Valorant"
-        title="photo of valorant"
-        height="500"
-        width="900"
-      />
-    </div>
-
-    <div class="box">
-      <h2>What is Valorant?</h2>
-      Riot Games's first ever FPS (first person shooter) game, Valorant, sister
-      to Riot's most succesful franchise 'League of Legends', was released in
-      2020. It is described as a 5v5 character-based tactical FPS where precise
-      gunplay meets unique agent abilities. Two teams, defenders vs attackers,
-      play to win 13 rounds on various maps. Valorant is the perfect blend
-      between CSGO and Overwatch, blending exciting agent abilities with
-      traditional gun-play to bring in new dimensional gameplays.There's much to
-      learn, but fret not! Valorant is a fairly simple and user friendly FPS
-      game that is quick to pick up. This guide will cover all the basics you
-      need to know to get started!
-      <div>
-        <a
-          class="buttons"
-          href="https://playvalorant.com/en-us/?utm_source=riotbar&utm_medium=productcard%2Bplayvalorant.com&utm_campaign=val&utm_content=ep5act1"
-          >Get Started</a
-        >
+      <div class="column">
+        <img src="images/valintro2.jpg" alt="val intro 2" title="intro to val 2" style="width:100%">
       </div>
-    </div>
-
-    <div class="box2">
-        <div class="row">
-            <div class="column">
-              <img src="images/valintro.jpg" alt="val intro"  title="intro to val" style="width:100%">
-            </div>
-            <div class="column">
-              <img src="images/valintro2.jpg" alt="val intro 2"  title="intro to val 2" style="width:100%">
-            </div>
     </div>
     <div class="p1">
       <p>
@@ -96,8 +79,64 @@
         it has been planted or to kill everyone in the attacker team. First team
         to win 13 rounds wins the entire game. Each round, you only have 1 life
         and 100 health. There will be exceptions to these due to agent and
-        shield variables (We will get into the details later). 
+        shield variables (We will get into the details later).
+
+        At the start of each round, you will need to buy a shield, a weapon and your agent's abilities. Everyone starts
+        off with 800 and your economy will depend on your in-game performance. Essentially, the more enemies you kill
+        and the more rounds your team wins, the more money you will have to buy better weapons.
       </p>
     </div>
-  </body>
+
+    <h2> Gamemodes</h2>
+    There are various different gamemodes. Credit to https://www.ign.com/wikis/valorant/Valorant_Game_Modes.
+    <table>    
+      <thread>
+        <th>Gamemodes</th>
+        <th>Description</th>
+      </thread>
+      <tr>
+        <td>Unrated</td>
+        <td>Unrated is Valorant’s standard game mode which includes all of the game’s main features. Agent select
+          (unique agent per player per team), buy phase (with the standard economy system), and standard gameplay are
+          all involved. There are 12 rounds per half, and first to 13 rounds wins. Should the score tie 12-12, overtimes
+          of 1 round per half can be played until 2 rounds are won in a row.</td>
+      <tr>
+        <td>Competitive</td>
+        <td>Competitive is Essentially the main focus of Valorant. It has the same ruleset as Unrated but with higher
+          stakes. Your personal performance, wins, and losses contribute to your rank rating. Check out the Competitive
+          Guide for more details.</td>
+      </tr>
+      <tr>
+        <td>Spike Rush</td>
+        <td>Spike Rush is meant to be a quick, bite-sized version of the Valorant experience. Agent select is still
+          present, but buying is not. There are only 3 rounds per half where 4 rounds are required to win, and overtime
+          is a single round. In this game mode, rounds are shorter and all players are given the same random loadout
+          with all non-ultimate abilities immediately available. Certain orbs are placed across the map which provide
+          you with various buffs to influence the round.</td>
+      </tr>
+      <tr>
+        <td>Deathmatch</td>
+        <td>Deathmatch is a 12-player free-for-all on a random map. This is typically played as a “warm up” prior to an
+          actual match, where you ensure your gunplay skills are on point before putting it to the test in an official
+          match. This mode is used solely for shooting practice — agents and abilities are not relevant, Heavy Shields
+          are automatically given, and all weapons are available. The match ends after a player reaches 40 kills or
+          after 9 minutes passes.</td>
+      </tr>
+      <tr>
+        <td>Replication</td>
+        <td>Replication is a casual game mode where everyone on a team plays as the same agent. There are 4 rounds in a
+          half, first to 5 wins, and overtime is one round. Each new round refreshes your abilities and resets your
+          weapons and shields. Regardless of round outcome, everyone receives 900 Creds on round 1, 2,400 on round 2,
+          3,900 on round 3, and 6,000 on round 4.</td>
+      </tr>
+      <tr>
+        <td>Escalation</td>
+        <td>Escalation is a casual 5v5 team deathmatch that features a random assortment of unconventional weapons. Each
+          team receives a random “escalation tool” to start with that range from snowball launchers to paint shells.
+          Getting enough kills as a team advances your team’s level up one — the team that finishes 12 levels wins.</td>
+      </tr>
+    </table>
+
+</body>
+
 </html>
