--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <title>Index</title>
   <link rel="stylesheet" href="styles/nav.css" />
   <link rel="icon" type="image/png" href="images/valicon.jpg" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
 </head>
 
 <body>
@@ -22,7 +21,7 @@
         <li class="dropdown">
           <a href="javascript:void(0)" class="dropbtn">About Valorant</a>
           <div class="dropdown-content">
-            <a href="#">Agents</a>
+            <a href="http://127.0.0.1:5501/agents.html">Agents</a>
             <a href="#">Maps</a>
             <a href="#">Weapons</a>
           </div>
@@ -59,7 +58,6 @@
     </div>
   </div>
 
-  <div class="box2">
     <div class="row">
       <div class="column">
         <img src="images/valintro.jpg" alt="val intro" title="intro to val" style="width:100%">
@@ -88,8 +86,8 @@
     </div>
 
     <h2> Gamemodes</h2>
-    There are various different gamemodes. Credit to https://www.ign.com/wikis/valorant/Valorant_Game_Modes.
-    <table>    
+    <p>There are various different gamemodes. Credit to https://www.ign.com/wikis/valorant/Valorant_Game_Modes.</p>
+    <table>
       <thread>
         <th>Gamemodes</th>
         <th>Description</th>
@@ -136,6 +134,8 @@
           Getting enough kills as a team advances your team’s level up one — the team that finishes 12 levels wins.</td>
       </tr>
     </table>
+    &nbsp;
+   
 
 </body>
 
