--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h1>The Ultimate Valorant Guide for Beginners</h1>
   </header>
   <div class="homepic">
-    <img src="images/valhome.webp" alt="Valorant" title="photo of valorant" height="500" width="900" />
+    <img src="images/valhome.webp" alt="Valorant" title="photo of valorant" height="400" width="800" />
   </div>
 
   <div class="box">
@@ -60,10 +60,10 @@
 
     <div class="row">
       <div class="column">
-        <img src="images/valintro.jpg" alt="val intro" title="intro to val" style="width:100%">
+        <img src="images/valintro.jpg" alt="val intro" title="intro to val" style="width:70%">
       </div>
       <div class="column">
-        <img src="images/valintro2.jpg" alt="val intro 2" title="intro to val 2" style="width:100%">
+        <img src="images/valintro2.jpg" alt="val intro 2" title="intro to val 2" style="width:70%">
       </div>
     </div>
     <div class="p1">
@@ -84,7 +84,7 @@
         and the more rounds your team wins, the more money you will have to buy better weapons.
       </p>
     </div>
-
+    &nbsp;
     <h2> Gamemodes</h2>
     <p>There are various different gamemodes. Credit to https://www.ign.com/wikis/valorant/Valorant_Game_Modes.</p>
     <table>
