--- a/agents.html
+++ b/agents.html
@@ -36,18 +36,86 @@
 
     <h1> Agents </h1>
     <p>The composition of your team is crucial to your teams success on certain maps. Each agent has unique abilities
-        that play a specific role. The four categories are split into duelists, initiators, sentinels and controllers.
+        that play a specific role. The four categories are split into duelists, initiators, sentinels and
+        controllers.There are currently a total of 18 agents, each reigning from a different country. This table details
+        the starting 5 agents you will have unlocked when you first start playing. To unlock other agents, you need to activate their contract and play more to earn XP.
         <br>
         Duelists: Duelists are self-sufficient fraggers who their team expects, through abilities and skills, to get
         high frags and seek out engagements first.
         <br>
-        Initiators: Initiators challenge angles by setting up their team to enter contested ground and push defenders away.
+        Initiators: Initiators challenge angles by setting up their team to enter contested ground and push defenders
+        away.
         <br>
-        Sentinels: Sentinels are defensive experts who can lock down areas and watch flanks, both on attacker and defender rounds.
+        Sentinels: Sentinels are defensive experts who can lock down areas and watch flanks, both on attacker and
+        defender rounds.
         <br>
         Controllers: Controllers are experts in slicing up dangerous territory to set their team up for success.
     </p>
 
+    <table>
+        <thread>
+            <th>Agents</th>
+            <th>Category & Description</th>
+            <th>Abilities</th>
+            <th>Photo/Trailer</th>
+        </thread>
+        <tr>
+            <td>Brimstone</td>
+            <td>Controller. Joining from the USA, Brimstone's orbital arsenal ensures his squad always has the
+                advantage. His ability to deliver utility precisely and from a distance make him an unmatched
+                boots-on-the-ground commander.</td>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/-TQJw8aG_mk"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe></td>
+            <td><img src="images/brimstone.webp" alt="brimstone" title="brimstone"></td>
+        <tr>
+            <td>Jett</td>
+            <td>Duelist. Representing her home country of South Korea, Jett's agile and evasive fighting style lets her
+                take risks no one else can. She runs circles around every skirmish, cutting enemies before they even
+                know what hit them.</td>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/XZx7NGecqSo"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe></td>
+            <td><img src="images/jett.webp" alt="jett" title="jett"></td>
+        </tr>
+        <tr>
+            <td>Phoneix</td>
+            <td>Duelist.Hailing from the U.K., Phoenix's star power shines through in his fighting style, igniting the
+                battlefield with flash and flare. Whether he's got backup or not, he'll rush into a fight on his own
+                terms.</td>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/MCdAAxkVTKw"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe></td>
+            <td><img src="images/phx.webp" alt="phx" title="phx"></td>
+        </tr>
+        <tr>
+            <td>Sova</td>
+            <td>Initiator. Born from the eternal winter of Russia's tundra, Sova tracks, finds, and eliminates enemies
+                with ruthless efficiency and precision. His custom bow and incredible scouting abilities ensure that
+                even if you run, you cannot hide.</td>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/OZ76UP-c8Ao"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe></td>
+            <td><img src="images/sova.webp" alt="sova" title="sova"></td>
+        </tr>
+        <tr>
+            <td>Sage</td>
+            <td>Sentinel.The bastion of China, Sage creates safety for herself and her team wherever she goes. Able to
+                revive fallen friends and stave off aggressive pushes, she provides a calm center to a hellish fight.
+            </td>
+            <td><iframe width="560" height="315" src="https://www.youtube.com/embed/ZVUX4Sc3n_c"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe></td>
+            <td><img src="images/sage.webp" alt="sage" title="sage"></td>
+
+        </tr>
+
+    </table>
 
 
 </body>
