--- a/agents.html
+++ b/agents.html
@@ -18,11 +18,12 @@
     <nav>
         <div class="valbar">
             <ul>
+                <li><a href="https://www.valorantguide.me">Home</a></li>
                 <li class="dropdown">
                     <a href="javascript:void(0)" class="dropbtn">About Valorant</a>
                     <div class="dropdown-content">
                         <a href="http://127.0.0.1:5501/agents.html">Agents</a>
-                        <a href="#">Maps</a>
+                        <a href="http://127.0.0.1:5501/maps.html">Maps</a>
                         <a href="#">Weapons</a>
                     </div>
                 </li>
