--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
           <div class="dropdown-content">
             <a href="http://127.0.0.1:5501/agents.html">Agents</a>
             <a href="http://127.0.0.1:5501/maps.html">Maps</a>
-            <a href="#">Weapons</a>
+            <a href="http://127.0.0.1:5501/weapons.html">Weapons</a>
           </div>
         </li>
         <li><a href="#">FPS Basics</a></li>
         <li><a href="#">Glossary</a></li>
         <li><a href="#">Sitemap</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="http://127.0.0.1:5501/contactus.html">Contact Us</a></li>
       </ul>
     </div>
   </nav>
@@ -59,14 +59,14 @@
     </div>
   </div>
 
-    <div class="row">
-      <div class="column">
-        <img src="images/valintro.jpg" alt="val intro" title="intro to val" style="width:70%">
-      </div>
-      <div class="column">
-        <img src="images/valintro2.jpg" alt="val intro 2" title="intro to val 2" style="width:70%">
-      </div>
+  <div class="row">
+    <div class="column">
+      <img src="images/valintro.jpg" alt="val intro" title="intro to val" style="width:70%">
     </div>
+    <div class="column">
+      <img src="images/valintro2.jpg" alt="val intro 2" title="intro to val 2" style="width:70%">
+    </div>
+
     <div class="p1">
       <p>
         In a tatical 5v5 shooter game, each player will select an agent at the
@@ -136,7 +136,7 @@
       </tr>
     </table>
     &nbsp;
-   
+
 
 </body>
 
