--- a/agents.html
+++ b/agents.html
@@ -24,13 +24,13 @@
                     <div class="dropdown-content">
                         <a href="http://127.0.0.1:5501/agents.html">Agents</a>
                         <a href="http://127.0.0.1:5501/maps.html">Maps</a>
-                        <a href="#">Weapons</a>
+                        <a href="http://127.0.0.1:5501/weapons.html">Weapons</a>
                     </div>
                 </li>
                 <li><a href="#">FPS Basics</a></li>
                 <li><a href="#">Glossary</a></li>
                 <li><a href="#">Sitemap</a></li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="http://127.0.0.1:5501/contactus.html">Contact Us</a></li>
             </ul>
         </div>
     </nav>
