--- a/weapons.html
+++ b/weapons.html
@@ -27,7 +27,7 @@
                         <a href="http://127.0.0.1:5501/weapons.html">Weapons</a>
                     </div>
                 </li>
-                <li><a href="#">FPS Basics</a></li>
+                <li><a href="http://127.0.0.1:5501/fpsbasics.html">FPS Basics</a></li>
                 <li><a href="#">Glossary</a></li>
                 <li><a href="#">Sitemap</a></li>
                 <li><a href="http://127.0.0.1:5501/contactus.html">Contact Us</a></li>
@@ -64,16 +64,24 @@
 
         <img class="tierlist" src="images/tierlist.webp" alt="tier list" title="rank list" style="width:30%">
 
-        <div class="box"> Riot Games's first ever FPS (first person shooter) game, Valorant, sister
-            to Riot's most succesful franchise 'League of Legends', was released in
-            2020. It is described as a 5v5 character-based tactical FPS where precise
-            gunplay meets unique agent abilities. Two teams, defenders vs attackers,
-            play to win 13 rounds on various maps. Valorant is the perfect blend
-            between CSGO and Overwatch, blending exciting agent abilities with
-            traditional gun-play to bring in new dimensional gameplays.There's much to
-            learn, but fret not! Valorant is a fairly simple and user friendly FPS
-            game that is quick to pick up. This guide will cover all the basics you
-            need to know to get started!
+        <div class="box">S-tier
+            These are weapons that have an optimal cost/effectiveness ratio. They are typically the most commonly used
+            guns for most maps on both offense/defense and the least situational weapons.
+
+            A-tier
+            These are weapons that are very powerful but a little more situational than S-Tier. They usually have a
+            slightly lower cost/effectiveness ratio and may not work too well on either offense or defense on certain
+            maps.
+
+            B-tier
+            These are weapons that can be strong in certain situations but also tend to have a disadvantage against
+            their competitors in many situations. You usually only run them at very specific parts of the map and they
+            can vary in performance based on attacking or defending.
+
+            C-tier
+            These are weapons that are very situational and rarely worth picking up. They are they rarely offer an
+            advantage over their competition.
+
             <div>
 
 </body>
