--- a/contactus.html
+++ b/contactus.html
@@ -27,7 +27,7 @@
                         <a href="http://127.0.0.1:5501/weapons.html">Weapons</a>
                     </div>
                 </li>
-                <li><a href="#">FPS Basics</a></li>
+                <li><a href="http://127.0.0.1:5501/fpsbasics.html">FPS Basics</a></li>
                 <li><a href="#">Glossary</a></li>
                 <li><a href="#">Sitemap</a></li>
                 <li><a href="http://127.0.0.1:5501/contactus.html">Contact Us</a></li>
