--- a/fpsbasics.html
+++ b/fpsbasics.html
@@ -10,6 +10,96 @@
     <link rel="icon" type="image/png" href="images/valicon.jpg" />
 </head>
 
+<style>
+    * {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 555px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.video {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+</style>
+
 <body>
     <div>
         <img class="logo" src="images/valicon.jpg" alt="logo" title="logo" width="50" />
@@ -28,7 +118,7 @@
                     </div>
                 </li>
                 <li><a href="http://127.0.0.1:5501/fpsbasics.html">FPS Basics</a></li>
-                <li><a href="#">Glossary</a></li>
+                <li><a href="http://127.0.0.1:5501/glossary.html">Glossary</a></li>
                 <li><a href="#">Sitemap</a></li>
                 <li><a href="http://127.0.0.1:5501/contactus.html">Contact Us</a></li>
             </ul>
@@ -37,26 +127,98 @@
 
     <h1>FPS Basics</h1>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/FEsPCDPv6W4" title="YouTube video player"
+<div class="slideshow-container">
+
+
+    <div class="video">
+      <div class="numbertext">1 / 6</div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/FEsPCDPv6W4" title="YouTube video player"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+    </div>
+  
+    <div class="video">
+      <div class="numbertext">2 / 6</div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/7jtDGa59Mkw" title="YouTube video player"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+    </div>
+  
+    <div class="video">
+      <div class="numbertext">3 / 6</div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/0lKMsdjn6qU" title="YouTube video player"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+    </div>
+
+    <div class="video">
+        <div class="numbertext">4 / 6</div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dO73NUIqt0k" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
+      </div>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/7jtDGa59Mkw" title="YouTube video player"
+      <div class="video">
+        <div class="numbertext">5 / 6</div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VnxzAsU7R7c" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
+      </div>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/0lKMsdjn6qU" title="YouTube video player"
+      <div class="video">
+        <div class="numbertext">6 / 6</div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/NDIY4sBFyNo" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
+      </div>
+  
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
+  
+  <!-- The dots/circles -->
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+    <span class="dot" onclick="currentSlide(4)"></span>
+    <span class="dot" onclick="currentSlide(5)"></span>
+    <span class="dot" onclick="currentSlide(6)"></span>
+  </div>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/dO73NUIqt0k" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+   <script>
+    let slideIndex = 1;
+showSlides(slideIndex);
 
+// Next/previous controls
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
 
+// Thumbnail image controls
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
 
-
-
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("video");
+  let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+}
+   </script>
+  
 
 
 </body>
